Fixed hover spacing

--- a/css/tooltip.scss
+++ b/css/tooltip.scss
@@ -9,7 +9,6 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 
 html, body {
   background: $clouds;
-  font-family: "Roboto", sans-serif;
   height: 100%;
   overflow-x: hidden;
   width: 100%;
@@ -17,29 +16,33 @@ html, body {
 * {
   box-sizing: border-box;
 }
+h1, h2, p {
+  font-family: "Roboto", sans-serif;
+}
 h1 {
   background: $pink;
   color: $paper;
   font-size: 26px;
-  margin: 0 0 50px;
+  margin-bottom: 50px;
   padding: 40px 0 40px 20%;
 }
-h2 {
-  color: $pink;
-  font-weight: 500;
-  margin-bottom: 16px;
-}
+
 body > div {
   background: #fff;
   border-radius: 2px;
-  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
-  margin-bottom: 30px;
+  box-shadow: 2px 2px 4px 0 rgba(0,0,0,0.2);
   margin-left: 20%;
+  margin-bottom: 30px;
   padding: 20px;
   width: 60%;
   &:last-of-type {
     margin-bottom: 100px;
   }
+}
+h2 {
+  color: $pink;
+  font-weight: 500;
+  margin-bottom: 16px;
 }
 p {
   display: inline;
@@ -58,8 +61,9 @@ button {
   color: #fff;
   font-size: 14px;
   padding: 10px 15px;  
-  text-shadow: 0 -1px 0 #1D6DC1;
+  text-shadow: 0 -1px 0 #1d6dc1;
 }
+
 [class^="tooltip"] {
   position: relative;
   &:after {
@@ -73,7 +77,7 @@ button {
     position: absolute;
     top: 1.4em;
     transform: translateX(-50%) translateY(-2px);
-    transition: opacity 0.2s $cubic, transform 0.2s $cubic;
+    transition: opacity 0.2s $cubic, transform 0.2s;
     visibility: hidden;
     white-space: nowrap;
     z-index: 2;
@@ -113,17 +117,17 @@ button {
 }
 .tooltip--triangle {
   &:before {
-    border-bottom: solid 5px #999;
-    border-left: solid 5px transparent;
-    border-right: solid 5px transparent;
-    content: "";
+    border-bottom: 5px solid #999;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    content: '';
     height: 0;
     left: 50%;
     opacity: 0;
     position: absolute;
     top: 1.1em;
     transform: translateX(-50%) translateY(-2px);
-    transition: opacity 0.2s $cubic, transform 0.2s $cubic;
+    transition: opacity 0.2s $cubic, transform 0.2s;
     visibility: hidden;
     width: 0;
     z-index: 3;
